[package]
name = "coffeepot"
version = "0.1.0"
authors = ["pi"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
timer = "0.2.0"
chrono = "0.4"
rumqtt = "0.31.0"

[target.'cfg(target_arch = "arm")'.dependencies]
rppal = "0.11.3"
