[package]
name = "coffeepot"
version = "0.2.0"
authors = ["Henrik G Olsson <hnrklssn@gmail.com>"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
timer = "0.2.0"
chrono = "0.4"
rumqtt = "0.31.0"

[target.'cfg(target_arch = "arm")'.dependencies]
rppal = "0.11.3"

# Release build on arm7 segfaults without this
[profile.release]
codegen-units = 1
